i launched an elixir app once

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ body {
     <ul>
         <li>Deep learning;</li>
         <li>Clojure;</li>
+        <li>Elixir;</li>
         <li>Blockchain;</li>
         <li>Arduino.</li>
     </ul>
