new job? unbelievable

--- a/index.html
+++ b/index.html
@@ -86,20 +86,39 @@ body {
 <div class="previous-workplaces">
     <ul>
         <li class="previous-workplace">
-            <div class="company>">An NDA travel company</div>
+            <div class="company>">Zoolatech</div>
             <div class="dates">Feb 2021 - Present</div>
             <div class="description">
-                <p>Nowadays, I do software engineering for a big travel company. We use a zoo of Big Data
-                    technologies,
+                <p>Nowadays, I'm a Scala engineer in Zoolatech. Currently, we are working with a warehousing company, that saw that warehouses are not very efficient and is trying to optimize them.
+                </p>
+                <p>I'm a backend engineer, working on integrating with new warehouses, making sure that previous integrations work, improving the codebase, etc.
+                </p>
+                <p>As a part of Zoolatech, I'm one of the mentors in our students program - Zoola Academy. I write lectures, come up with take-home assignments, answer questions, 
+                    review other lectures and otherwise help the students become software engineers.
+                </p>
+                <p> As for the stack: </p>
+                <ul>
+                    <li>We use Scala with cats;</li>
+                    <li>Runs on GCP;</li>
+                    <li>We use Postgres for all of our storage and Kafka for all of our message brokering.</li>
+                </ul>
+            </div>
+        </li>
+        
+        <li class="previous-workplace">
+            <div class="company>">An NDA travel company</div>
+            <div class="dates">Feb 2021 - Nov 2021</div>
+            <div class="description">
+                <p>I was a big data engineer for an even bigger travel company. We used a zoo of Big Data technologies,
                     such as Spark, Hadoop, Hive, Apache Airflow, you name it.
                 </p>
-                <p>I'm responsible for creating and supporting data pipelines, enabling the data science team to
+                <p>I was responsible for creating and supporting data pipelines, enabling the data science team to
                     access and use the data about our customers.
                 </p>
                 <ul>
-                    <li>We use Java and Scala;</li>
-                    <li>Runs on AWS;</li>
-                    <li>Stores data in NoSQL DBs: Redis, DynamoDB.</li>
+                    <li>We used Java and Scala;</li>
+                    <li>It ran on AWS;</li>
+                    <li>Stored data in NoSQL DBs: Redis, DynamoDB.</li>
                 </ul>
             </div>
         </li>
