--- a/index.html
+++ b/index.html
@@ -48,15 +48,7 @@ body {
     </style>
 </head>
 <body>
-<h1 class="name">Serhii Lekariev</h1>
-<h2>Contacts</h2>
-<div class="contacts">
-    <ul>
-        <li>Email: <a href="mailto:serhii.lekariev@gmail.com">serhii.lekariev@gmail.com</a></li>
-        <li><a href="https://t.me/saeryan">Telegram</a></li>
-    </ul>
-</div>
-<h2>Competencies</h2>
+<h1 class="name">Software engineer</h1>
 <div class="competencies">
     Those are the languages that I have professional experience using along their respective ecosystems:
     <ul>
