new job! pogchamp

--- a/index.html
+++ b/index.html
@@ -82,22 +82,35 @@ body {
 <h2>Experience</h2>
 <div class="previous-workplaces">
     <ul>
-        <li class="previous-workplace">
+         <li class="previous-workplace">
             <div class="company>">Zoolatech</div>
             <div class="dates">Nov 2021 - Present</div>
             <div class="description">
-                <p>Nowadays, I'm a Scala engineer in Zoolatech. Currently, we are working with a warehousing company, that saw that warehouses are not very efficient and is trying to optimize them.
-                </p>
-                <p>I'm a backend engineer, working on integrating with new warehouses, making sure that previous integrations work, improving the codebase, etc.
-                </p>
-                <p>As a part of Zoolatech, I'm one of the mentors in our students program - Zoola Academy. I write lectures, come up with take-home assignments, answer questions, 
-                    review other lectures and otherwise help the students become software engineers.
-                </p>
+                <p>Nowadays, I'm a Scala engineer at Betby. We are providing a sportbook as a product. I work with the datafeed providers to integrate the low-level stats and betting information into our system.
                 <p> As for the stack: </p>
                 <ul>
-                    <li>We use Scala with cats;</li>
-                    <li>Runs on GCP;</li>
-                    <li>We use Postgres for all of our storage and Kafka for all of our message brokering.</li>
+                    <li>Scala, but we are wannabe Haskell-developers, so it's pretty FP heavy with cats and fs2;</li>
+                    <li>We host our own k8s clusters;</li>
+                    <li>Data storage is mongo, data streams are rabbit.</li>
+                </ul>
+            </div>
+        </li>
+        <li class="previous-workplace">
+            <div class="company>">Zoolatech</div>
+            <div class="dates">Nov 2021 - July 2022</div>
+            <div class="description">
+                <p>Scala engineer in Zoolatech. Worked with a warehousing company, that saw that warehouses are not very efficient and is trying to optimize them.
+                </p>
+                <p>Was a backend engineer, working on integrating with new warehouses, making sure that previous integrations work, improving the codebase, etc.
+                </p>
+                <p>As a part of Zoolatech, was one of the mentors in our students program - Zoola Academy. Wrote lectures, ca,e up with take-home assignments, answer questions, 
+                    review other lectures and otherwise help the students become software engineers.
+                </p>
+                <p> The stack: </p>
+                <ul>
+                    <li>Scala with cats;</li>
+                    <li>GCP;</li>
+                    <li>Postgres for all of our storage and Kafka for all of our message brokering.</li>
                 </ul>
             </div>
         </li>
