--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ body {
         </li>
         <li class="previous-workplace">
             <div class="company>">Zoolatech</div>
-            <div class="dates">Nov 2021 - July 2022</div>
+            <div class="dates">July 2022 - Present</div>
             <div class="description">
                 <p>Scala engineer in Zoolatech. Worked with a warehousing company, that saw that warehouses are not very efficient and is trying to optimize them.
                 </p>
