--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ body {
 <div class="previous-workplaces">
     <ul>
          <li class="previous-workplace">
-            <div class="company>">Zoolatech</div>
+            <div class="company>">Betby</div>
             <div class="dates">Nov 2021 - Present</div>
             <div class="description">
                 <p>Nowadays, I'm a Scala engineer at Betby. We are providing a sportbook as a product. I work with the datafeed providers to integrate the low-level stats and betting information into our system.
