--- a/index.html
+++ b/index.html
@@ -86,8 +86,7 @@ body {
             <div class="company>">Betby</div>
             <div class="dates">Nov 2021 - Present</div>
             <div class="description">
-                <p>Nowadays, I'm a technical lead at a team of 5 people. As an individual contributor, I owned several key data ingestion components.</p>
-                <p>As a technical lead, I took responsibility for the architecture of all data provider integrations, wrote backend libraries, and was otherwise heavily involved in making sure our backend doesn't suck.</p>
+                <p>Technical lead at a team of 5 people. As an individual contributor, I owned several key data ingestion components. As a technical lead, I took responsibility for the architecture of all data provider integrations, wrote backend libraries, and was otherwise heavily involved in making sure our backend doesn't suck.</p>
                 <p>Additionally, I'm teaching functional programming and Scala to OOP Python developers.</p>
                 <p> As for the stack: </p>
                 <ul>
@@ -105,8 +104,8 @@ body {
                 </p>
                 <p>As a backend engineer, worked on integrating with new warehouses, making sure that previous integrations work, improving the codebase, etc.
                 </p>
-                <p>As a part of Zoolatech, was one of the mentors in our students program - Zoola Academy. Wrote lectures, ca,e up with take-home assignments, answer questions, 
-                    review other lectures and otherwise help the students become software engineers.
+                <p>As a part of Zoolatech, was one of the mentors in our students program - Zoola Academy. Wrote lectures, came up with take-home assignments, answered questions, 
+                    reviewed other lectures and otherwise helped the students become software engineers.
                 </p>
                 <p> The stack: </p>
                 <ul>
