--- a/index.html
+++ b/index.html
@@ -84,21 +84,21 @@ body {
     <ul>
          <li class="previous-workplace">
             <div class="company>">Betby</div>
-            <div class="dates">Nov 2021 - Present</div>
+            <div class="dates">Aug 2022 - Present</div>
             <div class="description">
                 <p>Technical lead at a team of 5 people. As an individual contributor, I owned several key data ingestion components. As a technical lead, I took responsibility for the architecture of all data provider integrations, wrote backend libraries, and was otherwise heavily involved in making sure our backend doesn't suck.</p>
                 <p>Additionally, I'm teaching functional programming and Scala to OOP Python developers.</p>
                 <p> As for the stack: </p>
                 <ul>
-                    <li>Scala with a functional flavour: fs2, cats, cats-effects;</li>
+                    <li>Scala with a functional flavour: fs2, cats, cats-effects, kyo;</li>
                     <li>On-prem k8s clusters;</li>
-                    <li>Data storage is mongo, data streams are rabbit.</li>
+                    <li>Data storage is mongo, data streams are rabbit + kafka</li>
                 </ul>
             </div>
         </li>
         <li class="previous-workplace">
             <div class="company>">Zoolatech</div>
-            <div class="dates">July 2022 - Present</div>
+            <div class="dates">Nov 2021 - Aug 2022</div>
             <div class="description">
                 <p>Scala engineer in Zoolatech. Worked with a warehousing optimization company.
                 </p>
